--- a/src/style/_customs.scss
+++ b/src/style/_customs.scss
@@ -1,5 +1,5 @@
 html {
-  background-color:  #F8F4FF;
+  background-color: rgba(219, 202, 199, 0.64);
   font-family: 'Lato', sans-serif;
 }
 
@@ -11,5 +11,5 @@ html,body {
 
 
 .font-1 {
-  font-family: 'Great Vibes', cursive;
+  font-family: 'Playball', cursive;
 }
